# Project

./: .replit  app.py  pyproject.toml
app/: __init__.py  main.py
app/application_bot/: __init__.py  submitter.py
app/cover_letter_generator/: __init__.py  generator.py
app/job_scanner/: __init__.py  demo_jobs.py  filter.py  indeed.py  job_data.py  linkedin.py
app/notification_manager/: __init__.py  email_notifier.py
app/resume_processor/: __init__.py  analyzer.py  parser.py  skill_extractor.py
app/utils/: ai_helper.py  config.py  gemini_helper.py  logger.py
attached_assets/: Automated Job Application Development Plan.txt  msg1.txt
configs/: .env.example
data/cover_letters/: TechCorp_Inc._software_Software_Engineer_1747795342.txt
data/resumes/: sample_resume.txt
data/tailored_resumes/: tailored_resume_#_About_the_20250521_024219.txt
templates/: cover_letter_template.txt  email_notification.html
